--- a/package.json
+++ b/package.json
@@ -1,1 +1,6 @@
 "publishConfig": { "registry": "https://npm.pkg.github.com/" }
+
+$ npm login --registry=https://npm.pkg.github.com/
+
+// Step 3: Publish
+$ npm publish
